base/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-bootcamp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-bootcamp
  template:
    metadata:
      labels:
        app: kubernetes-bootcamp
    spec:
      securityContext: # SECURITY: Prevents root access
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: kubernetes-bootcamp
        image: gcr.io/google-samples/kubernetes-bootcamp:v1
        ports:
        - containerPort: 8080
        resources: # STABILITY: Prevents "Noisy Neighbor" issues
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
        livenessProbe: # HEALTH: Restarts if the app freezes
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
        readinessProbe: # TRAFFIC: Only sends users if the app is ready
          httpGet:
            path: /
            port: 8080
