base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-bootcamp-service
spec:
  type: ClusterIP # Internal only; more secure than NodePort
  selector:
    app: kubernetes-bootcamp
  ports:
    - port: 80
      targetPort: 8080
